--- a/index.html
+++ b/index.html
@@ -59,6 +59,13 @@
 
 <script>
 
+window.addEventListener('keydown', function (e) {
+  const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`)
+  // if(!audio) return // kalo mau biar gak bisa jalan bareng audio lebih dari satu
+  audio.currentTime = 0
+  audio.play()
+})
+
 </script>
 
 
